--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(QuickLaunch VERSION 0.1 LANGUAGES CXX)
+project(ZeroLaunch VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -30,7 +30,7 @@ set(PROJECT_SOURCES
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(QuickLaunch
+    qt_add_executable(ZeroLaunch
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         ./controller/keyboardhook.h ./controller/keyboardhook.cpp
@@ -51,27 +51,27 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         controller/uwpapp.h controller/uwpapp.cpp
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET QuickLaunch APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET ZeroLaunch APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(QuickLaunch SHARED
+        add_library(ZeroLaunch SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(QuickLaunch
+        add_executable(ZeroLaunch
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(QuickLaunch PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(ZeroLaunch PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
 if(PROPSYS_LIB)
-    target_link_libraries(QuickLaunch PRIVATE ${PROPSYS_LIB})
+    target_link_libraries(ZeroLaunch PRIVATE ${PROPSYS_LIB})
 else()
     message(FATAL_ERROR "Could not find propsys.lib")
 endif()
@@ -96,9 +96,9 @@ add_custom_target(copy_pinyin_file ALL
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
 if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.QuickLaunch)
+  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.ZeroLaunch)
 endif()
-set_target_properties(QuickLaunch PROPERTIES
+set_target_properties(ZeroLaunch PROPERTIES
     ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -107,12 +107,12 @@ set_target_properties(QuickLaunch PROPERTIES
 )
 
 include(GNUInstallDirs)
-install(TARGETS QuickLaunch
+install(TARGETS ZeroLaunch
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(QuickLaunch)
+    qt_finalize_executable(ZeroLaunch)
 endif()
