使用qhotkey来支持热键

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 3.5)
+include(FetchContent)
+cmake_minimum_required(VERSION 3.29)
 
 project(ZeroLaunch VERSION 0.1 LANGUAGES CXX)
 
@@ -8,6 +9,7 @@ set(CMAKE_AUTORCC ON)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(QT_DEFAULT_MAJOR_VERSION 6)
 
 # 设置可执行文件的输出目录
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/program)
@@ -18,10 +20,22 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/program)
 # 设置静态库的输出目录
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/program)
 
+# 声明要下载的项目
+FetchContent_Declare(
+  qhotkey
+  GIT_REPOSITORY https://github.com/Skycoder42/QHotkey
+  GIT_TAG 1.5.0
+  CMAKE_ARGS -DQT_DEFAULT_MAJOR_VERSION=6 -DCMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH}
+)
 
+# 使其可用
+FetchContent_MakeAvailable(qhotkey)
 
+set_target_properties(qhotkey PROPERTIES AUTOMOC ON)
+set_target_properties(qhotkey PROPERTIES AUTOUIC ON)
+set_target_properties(qhotkey PROPERTIES AUTORCC ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
+find_package(QT NAMES Qt6 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 find_library(PROPSYS_LIB NAMES propsys HINTS "C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.26100.0\\um\\x64")
 
@@ -33,7 +47,6 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(ZeroLaunch
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
-        ./controller/keyboardhook.h ./controller/keyboardhook.cpp
         ./ui/icon.qrc
         ./ui/searchbar.h ./ui/searchbar.cpp
         ./ui/resultitem.h ./ui/resultitem.cpp ./ui/resultitem.ui
@@ -70,7 +83,7 @@ else()
     endif()
 endif()
 
-target_link_libraries(ZeroLaunch PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(ZeroLaunch PRIVATE Qt${QT_VERSION_MAJOR}::Widgets qhotkey)
 
 if(PROPSYS_LIB)
     target_link_libraries(ZeroLaunch PRIVATE ${PROPSYS_LIB})
