添加了程序启动次数统计的功能

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         controller/uwpapp.h controller/uwpapp.cpp
         ui/spinboxdelegate.h ui/spinboxdelegate.cpp
         ui/uiutils.h ui/uiutils.cpp
+        model/programlaunchcounter.h model/programlaunchcounter.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET ZeroLaunch APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
